--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "hot-cold",
+  "name": "react-hot-cold",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080/",
   "devDependencies": {
-    "enzyme": "^3.1.1",
+    "enzyme": "^3.3.0",
     "react-scripts": "1.0.17",
-    "react-test-renderer": "^16.1.1"
+    "react-test-renderer": "^16.3.2"
   },
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "enzyme-adapter-react-16": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
